[gd_scene load_steps=21 format=1]

[ext_resource path="res://hud/HUD_Timer.gd" type="Script" id=1]
[ext_resource path="res://buttons/greySheet.grey_button00.atex" type="Texture" id=2]
[ext_resource path="res://hud/spritesheet_hud.hud9.atex" type="Texture" id=3]
[ext_resource path="res://hud/spritesheet_hud.hud1.atex" type="Texture" id=4]
[ext_resource path="res://hud/spritesheet_hud.hud4.atex" type="Texture" id=5]
[ext_resource path="res://hud/spritesheet_hud.hud8.atex" type="Texture" id=6]
[ext_resource path="res://hud/spritesheet_hud.hud3.atex" type="Texture" id=7]
[ext_resource path="res://hud/spritesheet_hud.hud7.atex" type="Texture" id=8]
[ext_resource path="res://hud/spritesheet_hud.hud0.atex" type="Texture" id=9]
[ext_resource path="res://hud/spritesheet_hud.hud5.atex" type="Texture" id=10]
[ext_resource path="res://hud/spritesheet_hud.hud2.atex" type="Texture" id=11]
[ext_resource path="res://hud/spritesheet_hud.hud6.atex" type="Texture" id=12]
[ext_resource path="res://hud/spritesheet_hud.hudX.atex" type="Texture" id=13]
[ext_resource path="res://hud/HUD_Score.gd" type="Script" id=14]
[ext_resource path="res://hud/spritesheet_hud.hudPlayer_pink.atex" type="Texture" id=15]
[ext_resource path="res://hud/spritesheet_hud.hudPlayer_green.atex" type="Texture" id=16]
[ext_resource path="res://hud/spritesheet_hud.hudPlayer_yellow.atex" type="Texture" id=17]
[ext_resource path="res://hud/spritesheet_hud.hudPlayer_beige.atex" type="Texture" id=18]
[ext_resource path="res://hud/spritesheet_hud.hudPlayer_blue.atex" type="Texture" id=19]


[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "9",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "8",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "7",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "6",
"speed": 5.0
} ]

[node name="HUD" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Timer" type="Node2D" parent="."]

transform/pos = Vector2( 512, 32 )
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="Timer"]

visibility/self_opacity = 0.6
transform/pos = Vector2( 0, 2 )
transform/scale = Vector2( 0.8, 1.1 )
texture = ExtResource( 2 )

[node name="Numbers" type="Node2D" parent="Timer"]

editor/display_folded = true

[node name="Number_3" type="AnimatedSprite" parent="Timer/Numbers"]

transform/pos = Vector2( -50, 0 )
transform/scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "0"

[node name="Number_2" type="AnimatedSprite" parent="Timer/Numbers"]

transform/pos = Vector2( -20, 0 )
transform/scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "0"

[node name="Separator" type="Sprite" parent="Timer/Numbers"]

transform/pos = Vector2( 0, -4 )
transform/scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 13 )

[node name="Separator1" type="Sprite" parent="Timer/Numbers"]

transform/pos = Vector2( 0, 4 )
transform/scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 13 )

[node name="Number_1" type="AnimatedSprite" parent="Timer/Numbers"]

transform/pos = Vector2( 20, 0 )
transform/scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "0"

[node name="Number_0" type="AnimatedSprite" parent="Timer/Numbers"]

transform/pos = Vector2( 50, 0 )
transform/scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "0"

[node name="countdown" type="Timer" parent="Timer"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Score" type="Node2D" parent="."]

transform/pos = Vector2( 512, 600 )
script/script = ExtResource( 14 )

[node name="background" type="Sprite" parent="Score"]

visibility/self_opacity = 0.6
transform/scale = Vector2( 2.1, 1 )
texture = ExtResource( 2 )

[node name="red_alien" type="Node2D" parent="Score"]

editor/display_folded = true
transform/pos = Vector2( -160, 0 )

[node name="icon" type="Sprite" parent="Score/red_alien"]

transform/pos = Vector2( 20, 0 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 15 )

[node name="Number_1" type="AnimatedSprite" parent="Score/red_alien"]

transform/pos = Vector2( -15, 0 )
transform/scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "0"

[node name="Number_0" type="AnimatedSprite" parent="Score/red_alien"]

transform/scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "0"

[node name="green_alien" type="Node2D" parent="Score"]

editor/display_folded = true
transform/pos = Vector2( -80, 0 )

[node name="Number_1" type="AnimatedSprite" parent="Score/green_alien"]

transform/pos = Vector2( -15, 0 )
transform/scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "0"

[node name="Number_0" type="AnimatedSprite" parent="Score/green_alien"]

transform/scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "0"

[node name="icon" type="Sprite" parent="Score/green_alien"]

transform/pos = Vector2( 20, 0 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 16 )

[node name="yellow_alien" type="Node2D" parent="Score"]

[node name="icon" type="Sprite" parent="Score/yellow_alien"]

transform/pos = Vector2( 20, 0 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 17 )

[node name="Number_1" type="AnimatedSprite" parent="Score/yellow_alien"]

transform/pos = Vector2( -15, 0 )
transform/scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "0"

[node name="Number_0" type="AnimatedSprite" parent="Score/yellow_alien"]

transform/scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "0"

[node name="grey_alien" type="Node2D" parent="Score"]

editor/display_folded = true
transform/pos = Vector2( 80, 0 )

[node name="icon" type="Sprite" parent="Score/grey_alien"]

transform/pos = Vector2( 20, 0 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 18 )

[node name="Number_1" type="AnimatedSprite" parent="Score/grey_alien"]

transform/pos = Vector2( -15, 0 )
transform/scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "0"

[node name="Number_0" type="AnimatedSprite" parent="Score/grey_alien"]

transform/scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "0"

[node name="blue_alien" type="Node2D" parent="Score"]

transform/pos = Vector2( 160, 0 )

[node name="icon" type="Sprite" parent="Score/blue_alien"]

transform/pos = Vector2( 20, 0 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 19 )

[node name="Number_1" type="AnimatedSprite" parent="Score/blue_alien"]

transform/pos = Vector2( -15, 0 )
transform/scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "0"

[node name="Number_0" type="AnimatedSprite" parent="Score/blue_alien"]

transform/scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "0"

[connection signal="timeout" from="Timer/countdown" to="Timer" method="_on_countdown_timeout"]


